--- a/emacs.org
+++ b/emacs.org
@@ -923,6 +923,7 @@ _m_  many-windows     |  _k_  step       _r_  remove break
 (add-hook 'c-mode-common-hook
           (lambda()
             ;; Use C++ style comments
+	        (lsp)
             (setq comment-start "//" comment-end  "")))
 #+END_SRC
 
