--- a/emacs.org
+++ b/emacs.org
@@ -1387,6 +1387,10 @@ eyebrowse               frame management
 #+BEGIN_SRC emacs-lisp
 (require 'ox-publish)
 
+;; default one would pick source colours from my current theme...
+(setq org-html-htmlize-output-type 'css)
+
+
 (setq org-publish-project-alist
       '(("org-blog"
 	 :base-directory "~/private-sync/blog/"
@@ -1395,7 +1399,14 @@ eyebrowse               frame management
 	 :recursive t
 	 :publishing-function org-html-publish-to-html
 	 :headline-levels 4             ; Just the default for this project.
-	 :auto-preamble t )))
+	 :auto-preamble t )
+	("org-static"
+	 :base-directory "~/private-sync/blog/"
+	 :base-extension "css\\|js\\|png\\|jpg\\|gif\\|pdf\\|mp3\\|ogg\\|swf"
+	 :publishing-directory "~/public_html/"
+	 :recursive t
+	 :publishing-function org-publish-attachment
+	 )))
 #+END_SRC
 
 * ALIAS
