--- a/emacs.org
+++ b/emacs.org
@@ -26,6 +26,11 @@
 
 ;; Make sure we install any packages that aren't on the system.
 (setq use-package-always-ensure t)
+
+;; Make sure the packages we use litter the root of .emacs.d as little as
+;; possible.
+;; This will make them put their configs under ./var and ./etc
+(use-package no-littering)
 #+END_SRC
 
 * INIT BASICS
