--- a/emacs.org
+++ b/emacs.org
@@ -186,17 +186,14 @@
 
 ** Native emacs comp
 #+BEGIN_SRC emacs-lisp
-;; THIS IS THE FUTURE RIGHT THERE!
-;; (setq comp-deferred-compilation t)
-
-(setq comp-speed 2
-      comp-deferred-compilation nil)
+(setq comp-deferred-compilation nil
+      package-native-compile t)
 
 (defun compile-elpa-and-custom-to-native ()
   (interactive)
   (progn
     (recompile-custom-packages)
-    (native-compile-async '("~/.emacs.d/custom-packages" "~/.emacs.d/elpa") t t)))
+    (native-compile-async '("~/.emacs.d/custom-packages" "~/.emacs.d/elpa") 'recursively)))
 #+END_SRC
 
 ** Miscellaneous
