+ use-package posframe

--- a/emacs.org
+++ b/emacs.org
@@ -348,6 +348,7 @@
 (use-package hydra  :ensure t :defer t)
 (use-package pretty-hydra :ensure t :defer t)
 
+(use-package posframe)
 (require 'hydra-posframe)
 
 (customize-set-variable 'hydra-posframe-border-width 4)
