--- a/emacs.org
+++ b/emacs.org
@@ -554,7 +554,7 @@
 #+BEGIN_SRC emacs-lisp
 (use-package dired-x :ensure nil)
 (use-package dired-subtree :defer t)
-(use-package treemacs-icons-dired :defer t)
+;; (use-package treemacs-icons-dired :defer t)
 (use-package dired-extension :ensure nil)
 (use-package dired-toggle-sudo :ensure nil)
 
@@ -563,7 +563,7 @@
 (add-hook 'dired-mode-hook
 	  (lambda ()
 	    (dired-hide-details-mode 1)
-	    (treemacs-icons-dired-mode)
+	    ;; (treemacs-icons-dired-mode)
         (dired-omit-mode)))
 
 (define-key dired-mode-map (kbd "l") 'dired-up-directory)
@@ -807,7 +807,7 @@
           (company-capf .
 			( :selected (:background "orange" :foreground "black"))))))
 
-(use-package company-lsp :defer t)
+;; (use-package company-lsp :defer t)
 
 (use-package company :defer t
   :bind ( :map company-active-map
