--- a/emacs.org
+++ b/emacs.org
@@ -115,48 +115,50 @@
 
 ** Themes and colours
 #+BEGIN_SRC emacs-lisp
-(customize-set-variable 'custom-enabled-themes '(wombat))
+(when (display-graphic-p)
 
-(customize-set-variable
- 'custom-safe-themes '("3c83b3676d796422704082049fc38b6966bcad960f896669dfc21a7a37a748fa" default))
+  (customize-set-variable 'custom-enabled-themes '(wombat))
 
-(custom-set-faces
- '(org-level-1 ((t (:inherit outline-1 :weight demibold :foreground "DarkOrange3" :height 1.2))))
- '(org-level-2 ((t (:inherit outline-2 :weight demibold :foreground "darkOliveGreen3" :height 1.2))))
- '(org-level-3 ((t (:inherit outline-3 :weight demibold :height 1.1))))
- '(org-level-4 ((t (:inherit outline-4 :weight demibold :height 1.0))))
- '(org-level-5 ((t (:inherit outline-5 :weight demibold :height 1.0))))
+  (customize-set-variable
+   'custom-safe-themes '("3c83b3676d796422704082049fc38b6966bcad960f896669dfc21a7a37a748fa" default))
 
- '(default ((t (:background "#131818"))))
- '(cursor ((t (:background "OrangeRed"))))
- '(mode-line-inactive ((t (:background "#101010"))))
- '(mode-line ((t (:background "#404040"))))
- '(hl-line ((t (:inherit nil :background "#222222"))))
- '(minibuffer-prompt ((t (:foreground "#ff584d"))))
+  (custom-set-faces
+   '(org-level-1 ((t (:inherit outline-1 :weight demibold :foreground "DarkOrange3" :height 1.2))))
+   '(org-level-2 ((t (:inherit outline-2 :weight demibold :foreground "darkOliveGreen3" :height 1.2))))
+   '(org-level-3 ((t (:inherit outline-3 :weight demibold :height 1.1))))
+   '(org-level-4 ((t (:inherit outline-4 :weight demibold :height 1.0))))
+   '(org-level-5 ((t (:inherit outline-5 :weight demibold :height 1.0))))
 
- ;; Make some default wombat colours a bit more lively
- '(font-lock-builtin-face ((((class color) (min-colors 89)) (:foreground "#ff685d"))))
- '(font-lock-constant-face ((((class color) (min-colors 89)) (:foreground "#ff685d"))))
+   '(default ((t (:background "#131818"))))
+   '(cursor ((t (:background "OrangeRed"))))
+   '(mode-line-inactive ((t (:background "#101010"))))
+   '(mode-line ((t (:background "#404040"))))
+   '(hl-line ((t (:inherit nil :background "#222222"))))
+   '(minibuffer-prompt ((t (:foreground "#ff584d"))))
 
- ;; Some default helm faces are quite ugly... let's fix em up.
- '(helm-selection ((t (:background "grey24" :distant-foreground "black"))))
- '(helm-buffer-directory ((t (:weight bold :foreground "LightSlateBlue" :distant-foreground "black"))))
- '(helm-ff-directory ((t :inherit helm-buffer-directory )))
- '(helm-source-header ((t (:background "#450a6b" :foreground "#dddddd" :weight bold :height 1.3 :family "Sans Serif")))))
+   ;; Make some default wombat colours a bit more lively
+   '(font-lock-builtin-face ((((class color) (min-colors 89)) (:foreground "#ff685d"))))
+   '(font-lock-constant-face ((((class color) (min-colors 89)) (:foreground "#ff685d"))))
 
-(set-font-for-current-resolution)
+   ;; Some default helm faces are quite ugly... let's fix em up.
+   '(helm-selection ((t (:background "grey24" :distant-foreground "black"))))
+   '(helm-buffer-directory ((t (:weight bold :foreground "LightSlateBlue" :distant-foreground "black"))))
+   '(helm-ff-directory ((t :inherit helm-buffer-directory )))
+   '(helm-source-header ((t (:background "#450a6b" :foreground "#dddddd" :weight bold :height 1.3 :family "Sans Serif")))))
 
-(global-hl-line-mode t)
+  (set-font-for-current-resolution)
 
-;; Native compiles has some issues with powerline atm ;(
-(setq comp-deferred-compilation-deny-list '("powerline"))
+  (global-hl-line-mode t)
 
-(use-package powerline :ensure t :config
-  (powerline-default-theme)
-  (set-face-attribute 'mode-line nil
-                      :foreground "Black"
-                      :background "DarkOrange3"
-                      :box nil))
+  ;; Native compiles has some issues with powerline atm ;(
+  (setq comp-deferred-compilation-deny-list '("powerline"))
+
+  (use-package powerline :ensure t :config
+    (powerline-default-theme)
+    (set-face-attribute 'mode-line nil
+			:foreground "Black"
+			:background "DarkOrange3"
+			:box nil)))
 #+END_SRC
 
 ** Font rendering
