--- a/emacs.org
+++ b/emacs.org
@@ -26,6 +26,8 @@
 
 ;; Make sure we install any packages that aren't on the system.
 (setq use-package-always-ensure t)
+
+(setq warning-suppress-types '(((package reinitialization)) (comp)))
 #+END_SRC
 
 * INIT BASICS
